# planoDeLeituraAnual

./: .env.example  .gitignore  Dockerfile  README.md  biblia.df.json  biblia.ods  compose.yml  create_plan.py  database.py  main.py  plano.json  planodeleituraanual.spec  pyproject.toml  requirements.txt  scripts.py  shutdown.py
acf-json/: 10_1.json  10_10.json  10_11.json  10_12.json  10_13.json  10_14.json  10_15.json  10_16.json  10_17.json  10_18.json  10_19.json  10_2.json  10_20.json  10_21.json  10_22.json  10_23.json  10_24.json  10_3.json  10_4.json  10_5.json  10_6.json  10_7.json  10_8.json  10_9.json  11_1.json  11_10.json  11_11.json  11_12.json  11_13.json  11_14.json  11_15.json  11_16.json  11_17.json  11_18.json  11_19.json  11_2.json  11_20.json  11_21.json  11_22.json  11_3.json  (+1149 more)
planodeleituraanual/: __init__.py  acf.py  create_plan.py  database.py  functions.py  home_page.py  progresso_page.py  shutdown.py
planodeleituraanual/pages/: biblia.py  cadastro.py  home.py  progresso.py
scripts/: daily
